# monet.py

./: README.md  pyproject.toml
src/monet/: __init__.py  app.py  providers.py  tools.py
src/monet/backends/: __init__.py  base.py  dspy_backend.py  dummy.py
src/monet/commands/: __init__.py  _builtins.py
tests/: test_app.py  test_backends.py  test_commands.py  test_providers.py  test_tools.py
