[project]
name = "monet-code"
version = "0.1.1"
description = "Simple DSPy based coding harness with a Textual TUI"
readme = "README.md"
authors = [
    { name = "Waldemar Quevedo", email = "waldemar.quevedo@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dspy>=3.1.3",
    "textual>=8.2.3",
]

[project.scripts]
monet = "monet.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/monet"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
    "textual-dev>=1.8.0",
]
